--- a/index.html
+++ b/index.html
@@ -5,9 +5,56 @@
     <meta charset="utf-8" />
     <title>Viajes Chile</title>
 
+        <!-- Establecer el viewport y atributos para que se adapte al dispositivo  -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <!-- Preconectar los recursos externos -->
+        <link rel="dns-prefetch" href="https://cdnjs.cloudflare.com">
+        <link rel="dns-prefetch" href="https://fonts.googleapis.com">
+        <link rel="dns-prefetch" href="https://fonts.gstatic.com">
+
+        <link rel="preconnect" href="https://ajax.googleapis.com">
+        <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+        <link rel="preconnect" href="https://cdn.jsdelivr.net">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!-- Cargar mis estilos -->
+        <link rel="preload" href="./assets/img/volcan2.jpg" as="image">
+        <link rel="preload" href="./assets/img/carousel1.jpg" as="image">
+        <link rel="preload" href="./assets/img/carousel2.jpg" as="image">
+        <link rel="preload" href="./assets/img/carousel3.jpg" as="image">
+        <link rel="preload" href="./assets/img/cCard.jpg" as="image">
+        <link rel="preload" href="./assets/img/card1.jpg" as="image">
+        <link rel="preload" href="./assets/img/card2.jpg" as="image">
+        <link rel="preload" href="./assets/img/card3.jpg" as="image">
+        <link rel="preload" href="./assets/img/card4.jpg" as="image">
+
+        <!-- Cargar Fuentes CDN de Google -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alumni+Sans:wght@100;300;500&display=swap">
+
+        <!-- Cargar estilos Bootstrap -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+
+        <!-- Cargar estilos Font Awesome -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <!-- Cargar mis estilos -->
+        <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 </body>
+
+    <!-- Carga de JavaScript -->
+    <!-- jQuery -->
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <!-- Bootstrap JS -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- JS Selectores -->
+    <script type="text/javascript" src="assets/js/script.js"> </script>
+    <!-- script type="text/javascript" src="assets/js/selector_etiquetas.js"> </script -->
+    <script type="text/javascript" src="assets/js/selector_clases.js"> </script>
 
 </html>
