Agregar Sección Barra de Navegación.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
 
 <body>
 </body>
+<!-- 1. Una barra de navegación fija en la parte superior de la pantalla, con el logo y links a diferentes secciones de la página, haciendo un smooth scroll. -->
+<section id="secBarraNavegacion">
+    <nav id="NAVBAR" class="my-navbar navbar navbar-expand-lg text-white">
+        <div class="container px-12 navbar-dark" STYLE="text-shadow: -4px 6px 4px #222; text-align: left; font-size: 2em;">
+            <a class="navbar-brand" href="#secBarraNavegacion"><img src="assets/img/viajes.svg" width="35" height="35" alt="">
+                <span STYLE="text-shadow: -4px 6px 4px #222; text-align: left; font-weight: 200; font-size: 1.5em;">Viajes Chile</span>
+            </a>
+            <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div id="navbarNav" class="collapse navbar-collapse me-auto">
+                <ul class="navbar-nav mb-2 mb-lg-0"  style="font-weight: 300;">
+                    <li class="nav-item"><a class="nav-link" href="#secBarraNavegacion">Inicio</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#secDestacados">Destacados</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#secQuienesSomos">Quienes Somos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#secFooter">RRSS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#secContacto">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</section>
+
+
+
 
     <!-- Carga de JavaScript -->
     <!-- jQuery -->
