Agregar Sección Carrusel.

--- a/index.html
+++ b/index.html
@@ -67,6 +67,38 @@
     </nav>
 </section>
 
+<!-- 2. Un carousel que muestre las imágenes destacadas del sitio. -->
+<section id="secCarrusel" class="row d-sm-block d-md-block">
+    <article class="col-12">
+        <div id="demo" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <div class="row">
+                        <img src="assets/img/carousel1.jpg" class="img-fluid col-md-12 col-lg-12 col-xl-12">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <img src="assets/img/carousel2.jpg" class="img-fluid col-md-12 col-lg-12 col-xl-12">
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="row">
+                        <img src="assets/img/carousel3.jpg" class="img-fluid col-md-12 col-lg-12 col-xl-12">
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+        </div>
+    </article>
+</section>
+<hr>
+
 
 
 
