Agregar Sección Destacados.

--- a/index.html
+++ b/index.html
@@ -100,6 +100,165 @@
 <hr>
 
 
+    <!-- 4. Una sección de destacados, que muestre 4 cards (tarjetas) con la imagen einformación asociada. -->
+    <!-- CARDS  -->
+    <section id="secDestacados">
+        <div class="tarjeta text-center">
+            <div class="container gold stroke brillo">
+                <h1><strong>DESTACADOS</strong></h1>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product fondocard">
+                            <div class="wsk-cp-img">
+                                <img src="assets/img/card1.jpg" alt="Product" class="img-responsive" />
+                            </div>
+                            <div class="wsk-cp-text">
+                                <div class="title-product brillo">
+                                    <h4><strong>Torres del Paine</strong></h4>
+                                </div>
+                                <div id="brillo" class="description-prod brillo">
+                                    <p>El Parque Nacional Torres del Paine está ubicado en la Región de Magallanes y Antártica Chilena, comuna de Torres del Payne, provincia de Última Esperanza. Fue creado por D.S. N° 383 del Ministerio de
+                                        Agricultura, el 13 de mayo del año 1959. Es conocido mundialmente por los macizos que le dan su nombre, gigantes de granito modelados por la fuerza del hielo glacial.</p>
+                                </div>
+                                <!-- Footer de la CARD -->
+                                <div class="card-footer">
+                                    <!-- Iconos Font Aweson de RRSS -->
+                                    <div class="wcf-left">
+                                        <a href="https://www.pinterest.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Pinterest"><i class="fa fa-pinterest-square" aria-hidden="false"></i></a>
+                                        <a href="https://www.instagram.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Instagram"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+                                        <a href="https://www.facebook.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Facebook"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos me gusta -->
+                                    <div class="wcf-left">
+                                        <span>&nbsp;&nbsp;</span>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Me gusta"><i class="fa fa-thumbs-up" aria-hidden="false"></i></a>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Favoritos"><i class="	fa fa-heart" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos Font Aweson de Navegación de la página -->
+                                    <div class="wcf-right">
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Subir"><i class="fa fa-arrow-circle-up gold"></i></a>
+                                        <a href="#secQuienesSomos" data-toggle="tooltip" data-placement="top" title="Bajar"><i class="fa fa-arrow-circle-down gold"></i></a>
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Volver al inicio"><i class="fa fa-reorder gold"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product">
+                            <div class="wsk-cp-img"><img src="assets/img/card2.jpg" alt="Product" class="img-responsive" /></div>
+                            <div class="wsk-cp-text">
+                                <div class="title-product brillo">
+                                    <h4><strong>Los Flamencos</strong></h4>
+                                </div>
+                                <div id="brillo" class="description-prod brillo">
+                                    <p>La Reserva Nacional Los Flamencos está ubicada en la Región de Antofagasta, comuna de San Pedro de Atacama, provincia del Loa. Fue creada el día 17 de octubre de 1990, por Decreto Supremo nº 50 del Ministerio de
+                                        Agricultura.</p>
+                                </div>
+                                <!-- Footer de la CARD -->
+                                <div class="card-footer">
+                                    <!-- Iconos Font Aweson de RRSS -->
+                                    <div class="wcf-left">
+                                        <a href="https://www.pinterest.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Pinterest"><i class="fa fa-pinterest-square" aria-hidden="false"></i></a>
+                                        <a href="https://www.instagram.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Instagram"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+                                        <a href="https://www.facebook.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Facebook"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos me gusta -->
+                                    <div class="wcf-left">
+                                        <span>&nbsp;&nbsp;</span>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Me gusta"><i class="fa fa-thumbs-up" aria-hidden="false"></i></a>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Favoritos"><i class="	fa fa-heart" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos Font Aweson de Navegación de la página -->
+                                    <div class="wcf-right">
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Subir"><i class="fa fa-arrow-circle-up gold"></i></a>
+                                        <a href="#secQuienesSomos" data-toggle="tooltip" data-placement="top" title="Bajar"><i class="fa fa-arrow-circle-down gold"></i></a>
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Volver al inicio"><i class="fa fa-reorder gold"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product">
+                            <div class="wsk-cp-img"><img src="assets/img/card3.jpg" alt="Product" class="img-responsive" /></div>
+                            <div class="wsk-cp-text">
+                                <div class="title-product brillo">
+                                    <h4><strong>Laguana Chaxa</strong></h4>
+                                </div>
+                                <div id="brillo" class="description-prod brillo">
+                                    <p>La Laguna Chaxa se encuentra dentro del Salar de Atacama, a 60 kilómetros de San Pedro de Atacama y está dentro del Sistema de Protección de áreas silvestres de la CONAF, formando parte de la Reserva Nacional
+                                        Los Flamencos.</p>
+                                </div>
+                                <!-- Footer de la CARD -->
+                                <div class="card-footer">
+                                    <!-- Iconos Font Aweson de RRSS -->
+                                    <div class="wcf-left">
+                                        <a href="https://www.pinterest.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Pinterest"><i class="fa fa-pinterest-square" aria-hidden="false"></i></a>
+                                        <a href="https://www.instagram.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Instagram"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+                                        <a href="https://www.facebook.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Facebook"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos me gusta -->
+                                    <div class="wcf-left">
+                                        <span>&nbsp;&nbsp;</span>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Me gusta"><i class="fa fa-thumbs-up" aria-hidden="false"></i></a>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Favoritos"><i class="	fa fa-heart" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos Font Aweson de Navegación de la página -->
+                                    <div class="wcf-right">
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Subir"><i class="fa fa-arrow-circle-up gold"></i></a>
+                                        <a href="#secQuienesSomos" data-toggle="tooltip" data-placement="top" title="Bajar"><i class="fa fa-arrow-circle-down gold"></i></a>
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Volver al inicio"><i class="fa fa-reorder gold"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="wsk-cp-product">
+                            <div class="wsk-cp-img"><img src="assets/img/card4.jpg" alt="Product" class="img-responsive" /></div>
+                            <div class="wsk-cp-text">
+                                <div class="title-product brillo">
+                                    <h4><strong>Bosque Valdiviano</strong></h4>
+                                </div>
+                                <div id="brillo" class="description-prod brillo">
+                                    <p>El bosque valdiviano, también llamado selva valdiviana, o bosque andino patagónico es una ecorregión del centro-sur de Chile y Patagonia Argentina. Se caracteriza por tener bosques siempre verdes de múltiples
+                                        estratos, en un clima templado-lluvioso u oceánico. </p>
+                                </div>
+                                <!-- Footer de la CARD -->
+                                <div class="card-footer">
+                                    <!-- Iconos Font Aweson de RRSS -->
+                                    <div class="wcf-left">
+                                        <a href="https://www.pinterest.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Pinterest"><i class="fa fa-pinterest-square" aria-hidden="false"></i></a>
+                                        <a href="https://www.instagram.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Instagram"><i class="fa fa-instagram" aria-hidden="false"></i></a>
+                                        <a href="https://www.facebook.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Facebook"><i class="fa fa-facebook-official" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos me gusta -->
+                                    <div class="wcf-left">
+                                        <span>&nbsp;&nbsp;</span>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Me gusta"><i class="fa fa-thumbs-up" aria-hidden="false"></i></a>
+                                        <a href="#secDestacados" data-toggle="tooltip" data-placement="top" title="Favoritos"><i class="	fa fa-heart" aria-hidden="false"></i></a>
+                                    </div>
+                                    <!-- Iconos Font Aweson de Navegación de la página -->
+                                    <div class="wcf-right">
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Subir"><i class="fa fa-arrow-circle-up gold"></i></a>
+                                        <a href="#secQuienesSomos" data-toggle="tooltip" data-placement="top" title="Bajar"><i class="fa fa-arrow-circle-down gold"></i></a>
+                                        <a href="#secBarraNavegacion" data-toggle="tooltip" data-placement="top" title="Volver al inicio"><i class="fa fa-reorder gold"></i></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+
+
+
 
 
     <!-- Carga de JavaScript -->
