Agregar Sección Footer.

--- a/index.html
+++ b/index.html
@@ -394,10 +394,20 @@
         </fieldset>
     </form>
 </section>
- 
 
-
-
+<!-- 6. Una sección footer con links a las redes sociales. -->
+<footer id="secFooter" class="py-3">
+    <div class="container-fluid py-2 text-center" STYLE="font-size: 2em; width: 100%; color:#ffffff;">
+        <span>Viajes Chile&nbsp;&nbsp;</span>
+        <span>
+            <a href="https://www.github.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a GitHub"><span class="fa fa-github text-white" aria-hidden="false"></span></a>
+            <a href="https://www.linkeind.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Linkedin"><span class="fa fa-linkedin-square text-white" aria-hidden="false"></span></a>
+            <a href="https://www.pinterest.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Pinterest"><span class="fa fa-pinterest-square text-white" aria-hidden="false"></span></a>
+            <a href="https://www.instagram.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Instagram"><span class="fa fa-instagram text-white" aria-hidden="false"></span></a>
+            <a href="https://www.facebook.com" target="_blank" data-toggle="tooltip" data-placement="top" title="Ir a Facebook"><span class="fa fa-facebook-official text-white" aria-hidden="false"></span></a>
+        </span>
+    </div>
+</footer>
 
 <!-- Carga de JavaScript -->
 <!-- jQuery -->
